- enabled SummonPet spells to also be casted by NPCs