@@ -359,9 +359,9 @@ namespace WCell.RealmServer.Looting
 		/// Make sure the Looter is logged in before calling this Method.
 		/// 
 		/// TODO: Find the right error messages
-		/// TODO: Only give every MultiLoot item to everyone Once! Also check for quest-dependencies etc.
+		/// TODO: Only give every MultiLoot item to everyone once! Also check for quest-dependencies etc.
 		/// </summary>
-		public InventoryError MayLoot(LooterEntry looter, LootItem item)
+		public InventoryError CheckTakeItemConditions(LooterEntry looter, LootItem item)
 		{
 			if (item.Taken)
 			{
@@ -370,7 +370,7 @@ namespace WCell.RealmServer.Looting
 			if (item.RollProgress != null)
 			{
 				// TODO: Still being rolled for
-				return InventoryError.ALREADY_LOOTED;
+				return InventoryError.DONT_OWN_THAT_ITEM;
 			}
 			if (!looter.MayLoot(this))
 			{
@@ -392,7 +392,7 @@ namespace WCell.RealmServer.Looting
 				return InventoryError.OK;
 			}
 
-			if (!item.Template.CheckLootRequirements(looter.Owner))
+			if (!item.Template.CheckLootConstraints(looter.Owner))
 			{
 				return InventoryError.DONT_OWN_THAT_ITEM;
 			}
@@ -424,7 +424,7 @@ namespace WCell.RealmServer.Looting
 				if (chr != null && index < Items.Length)
 				{
 					lootItem = Items[index];
-					var err = MayLoot(entry, lootItem);
+					var err = CheckTakeItemConditions(entry, lootItem);
 					if (err == InventoryError.OK)
 					{
 						HandoutItem(chr, lootItem, targetCont, targetSlot);
@@ -605,16 +605,19 @@ namespace WCell.RealmServer.Looting
 			Looters.Remove(entry);
 		}
 
-        public void GiveLoot(Character chr, Character player, byte lootSlot)
+		/// <summary>
+		/// Lets the master looter give the item in the given slot to the given receiver
+		/// </summary>
+        public void GiveLoot(Character master, Character receiver, byte lootSlot)
         {
-            if (chr.Group == null) return;
-            if (chr.Group.MasterLooter.Character != chr) return;
-            if (player.Group == null) return;
-            if (chr.Group != player.Group) return;
-            if (!chr.Loot.Looters.Contains(player.LooterEntry)) return;
+            if (master.Group == null) return;
+            if (master.Group.MasterLooter.Character != master) return;
+            if (receiver.Group == null) return;
+            if (master.Group != receiver.Group) return;
+            if (!master.Loot.Looters.Contains(receiver.LooterEntry)) return;
             if (Items[lootSlot] == null) return;
 
-            HandoutItem(player, Items[lootSlot], null, BaseInventory.INVALID_SLOT);
+            HandoutItem(receiver, Items[lootSlot], null, BaseInventory.INVALID_SLOT);
         }
     }
 }
